package abstract_factory_pattern;

public abstract class AbstractFactory {
    public abstract AbstractProduct createProduct();
}
