package abstract_factory_pattern;

public class AbstractProduct {
}
