package abstract_factory_pattern;


public class ConcreteProduct extends AbstractProduct {

}
