package abstract_factory_pattern;

public class ConcreteProduct1 extends AbstractProduct {
}
